Fixed horizontal scrollbar bug on home page

--- a/src/Compnents2/CustomCSS/Header.css
+++ b/src/Compnents2/CustomCSS/Header.css
@@ -16,6 +16,8 @@
   height: 100vh;
   width: 100%;
   overflow-y: auto;
+  left: 0px;
+	overflow-x: hidden;
 }
 #navi .section-center{
   position: absolute;
@@ -46,7 +48,8 @@
 [type="checkbox"]:checked,
 [type="checkbox"]:not(:checked){
   position: absolute;
-  left: -9999px;
+  left: 0px;
+	overflow-x: hidden;
 }
 #navi .menu-icon:checked + label,
 #navi .menu-icon:not(:checked) + label{
@@ -73,9 +76,9 @@
   left: 0;
   border-top: 2px solid #ececee;
   border-bottom: 2px solid #ececee;
-  transition: border-width 100ms 1500ms ease, 
+  transition: border-width 100ms 1500ms ease,
               top 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1),
-              height 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1), 
+              height 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1),
               background-color 200ms ease,
               transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -91,9 +94,9 @@
   right: 4px;
   background-color: #ececee;
   margin-top: -1px;
-  transition: width 100ms 1750ms ease, 
+  transition: width 100ms 1750ms ease,
               right 100ms 1750ms ease,
-              margin-top 100ms ease, 
+              margin-top 100ms ease,
               transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 #navi .menu-icon:checked + label:before{
@@ -102,9 +105,9 @@
   height: 2px;
   background-color: #ececee;
   border-width: 0;
-  transition: border-width 100ms 340ms ease, 
+  transition: border-width 100ms 340ms ease,
               top 100ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
-              height 100ms 300ms cubic-bezier(0.23, 1, 0.32, 1), 
+              height 100ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
               background-color 200ms 500ms ease,
               transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -114,8 +117,8 @@
   right: 0;
   transform: rotate(-45deg);
   transition: width 100ms ease,
-              right 100ms ease,  
-              margin-top 100ms 500ms ease, 
+              right 100ms ease,
+              margin-top 100ms 500ms ease,
               transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
@@ -133,20 +136,20 @@
   box-shadow: 0 8px 30px 0 rgba(0,0,0,0.3);
   background-color: #353746;
   animation: border-transform 7s linear infinite;
-  transition: top 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),  
+  transition: top 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
               right 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
               transform 250ms 1100ms ease,
               width 650ms 400ms cubic-bezier(0.23, 1, 0.32, 1),
               height 650ms 400ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 @keyframes border-transform{
-    0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
-  14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
-  28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
-  42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
-  56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
-  70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
-  84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
+    0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; }
+  14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; }
+  28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; }
+  42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; }
+  56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; }
+  70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; }
+  84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; }
 }
 
 #navi .menu-icon:checked ~ .nav {
@@ -156,7 +159,7 @@
   transform: translate(50%, -50%);
   width: 200%;
   height: 200%;
-  transition: top 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),  
+  transition: top 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),
               right 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),
               transform 250ms 700ms ease,
               width 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1),
